// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FatherSonComponent debe hacer match con el snpashot 1`] = `
<div
  id="root1"
>
  <h5>
    son
  </h5>
  <code>
     
  </code>
  <br />
  <br />
  
  
</div>
`;

exports[`FatherSonComponent si hay cliente, hacer match con el snapshot 1`] = `
<div
  id="root4"
>
  <h5>
    son
  </h5>
  <code>
    {
  "id": 1,
  "name": "Dantee"
} 
  </code>
  <br />
  <br />
  <button
    class="btn btn-outline-primary mx-2"
    data-test="btnUpdate"
  >
    Cambiar ID
  </button>
  
  <button
    class="btn btn-outline-danger"
    data-test="btnDelete"
  >
    Borrar cliente
  </button>
  
</div>
`;
